fixed grid gap

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -102,6 +102,7 @@ body {
     grid-template-areas:
       "clifford harmon" "clifford abrams"
       "walters abrams " "whittle whittle";
+    gap: 1.2rem;
   }
 
   @media screen and(min-width:850px) {
@@ -112,6 +113,7 @@ body {
     grid-template-areas:
       "clifford clifford harmon" "walters abrams abrams"
       "whittle whittle .";
+    gap: 1.4rem;
   }
 
   @media screen and(min-width:1300px) {
@@ -120,10 +122,7 @@ body {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto auto;
     grid-template-areas: "clifford clifford walters whittle" "harmon abrams abrams whittle";
-
-    h1 {
-      font-size: 1.3;
-    }
+    gap: 1.625rem;
   }
 
   article {
@@ -190,6 +189,7 @@ body {
       margin-top: 1.3rem;
       font-size: 1rem;
       font-weight: 600;
+
       @media screen and(min-width:650px) {
         font-size: 1.15rem;
       }
@@ -206,6 +206,7 @@ body {
       font-weight: 500;
       opacity: 0.7;
       line-height: 1rem;
+
       @media screen and(min-width:650px) {
         font-size: 0.675rem;
       }
@@ -218,5 +219,5 @@ body {
     }
   }
 
-  //2:30 vorher
+  //3:40 vorher
 }
